--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: go
 sudo: false
 go:
     - 1.9
+    - tip
 before_install:
     - go get github.com/mattn/goveralls
     - go get golang.org/x/tools/cmd/cover
 script:
-    - $GOPATH/bin/goveralls -service=travis-ci
+    - go test -v -covermode=count -coverprofile=coverage.out
+    - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci
 notifications:
     email: false
