--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
     - go get github.com/mattn/goveralls
     - go get golang.org/x/tools/cmd/cover
 script:
-    - go test -v -covermode=count -coverprofile=coverage.out
+    - go test -v -covermode=count -coverprofile=coverage.out ./...
     - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci
 notifications:
     email: false
