--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,16 @@ sudo: false
 go:
     - 1.9
     - tip
+
 before_install:
     - go get github.com/mattn/goveralls
-    - go get golang.org/x/tools/cmd/cover
+    - go get github.com/go-playground/overalls
+    - go install github.com/go-playground/overalls
+
 script:
-    - go test -v -covermode=count -coverprofile=coverage.out ./...
+    - go test -v ./...
+    - overalls -project=github.com/AndrewLader/go-tendo -covermode=count
     - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci
+
 notifications:
     email: false
