--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,16 @@ go:
     - tip
 
 before_install:
-    - go get github.com/mattn/goveralls
+#    - go get github.com/mattn/goveralls
     - go get github.com/go-playground/overalls
     - go install github.com/go-playground/overalls
 
 script:
-    - go test -v ./...
+#    - go test -v ./...
     - overalls -project=github.com/AndrewLader/go-tendo -covermode=count
-    - $GOPATH/bin/goveralls -coverprofile=overalls.coverprofile -service=travis-ci
+    - mv overalls.coverprofile coverage.txt
+    - bash <(curl -s https://codecov.io/bash)
+#    - $GOPATH/bin/goveralls -coverprofile=overalls.coverprofile -service=travis-ci
 
 notifications:
     email: false
