--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
     - 1.x
 
 script:
-    - go test -cover ./tendo -coverprofile=coverage.txt -covermode=atomic
+    - go test -cover ./... -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
